--- a/project/public/package.json
+++ b/project/public/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.17.1",
     "element-ui": "^2.0.7",
     "vue": "^2.4.4",
+    "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "browserslist": [
